@@ -1,0 +1,19 @@
+#! /bin/sh
+set -e
+
+case "$1" in
+  configure)
+    if dpkg --compare-versions "$2" lt-nl 1.99~rc2-1; then
+      # Force dpkg to replace this directory with a symlink.
+      if [ ! -L /usr/share/doc/@PACKAGE@ ] && [ -d /usr/share/doc/@PACKAGE@ ]; then
+        if rmdir /usr/share/doc/@PACKAGE@ 2>/dev/null; then
+          ln -sf grub-common /usr/share/doc/@PACKAGE@
+        fi
+      fi
+    fi
+  ;;
+esac
+
+#DEBHELPER#
+
+exit 0
